--- a/Index.html
+++ b/Index.html
@@ -66,15 +66,16 @@
     const phrases = [
       "Te Amo 💖",
       "Eres preciosa ✨",
-      "Mi vida 🌹",
-      "Me encantas 😍",
-      "My love 💕",
-      "Amor de mi vida 🌙"
+      "Mi étoile",
+      "Me encantas",
+      "Tu y solamente a tu eres lo que mas quiero",
+      "Eres lo mas bonito que me ha pasado"
+      "No puedo imaginarme sin estar a tu lado"
     ];
 
     // Imágenes personalizadas (puedes poner URLs o archivos locales)
     const images = [
-      "foto1.jpg",
+      "IMG_1873.jpeg",
       "foto2.jpg",
       "foto3.jpg",
       "corazon.png"
