--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
     // Imágenes personalizadas (puedes poner URLs o archivos locales)
     const images = [
       "IMG_1873.jpeg",
-      "foto2.jpg",
+      "IMG_0836.jpeg",
       "foto3.jpg",
       "corazon.png"
     ];
