--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,8 @@
     const images = [
       "IMG_1873.jpeg",
       "IMG_0836.jpeg",
-      "foto3.jpg",
+      "IMG_0786.jpeg",
+      "
       "corazon.png"
     ];
 
