--- a/Index.html
+++ b/Index.html
@@ -78,6 +78,7 @@
       "IMG_1873.jpeg",
       "IMG_0836.jpeg",
       "IMG_0786.jpeg",
+      "IMG_0740.jpeg",
       "
       "corazon.png"
     ];
