--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
       "IMG_0836.jpeg",
       "IMG_0786.jpeg",
       "IMG_0740.jpeg",
-      "
+      "IMG_0177.jpeg",
       "corazon.png"
     ];
 
