--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       "IMG_0786.jpeg",
       "IMG_0740.jpeg",
       "IMG_0177.jpeg",
-      "IMG_0165.jpeg"
+      "IMG_0165.jpeg",
+      "61E978B9-98AE-45FC-97C1-1EAC05C58B61.jpeg"
     ];
 
     const container = document.getElementById("container");
