--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       "IMG_0740.jpeg",
       "IMG_0177.jpeg",
       "IMG_0165.jpeg",
-      "61E978B9-98AE-45FC-97C1-1EAC05C58B61.jpeg"
+      "61E978B9-98AE-45FC-97C1-1EAC05C58B61.jpeg",
+      "23d09daf-6559-461a-8c14-3c27f9fa7fcc.jpeg"
     ];
 
     const container = document.getElementById("container");
