Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       "Mi étoile",
       "Me encantas",
       "Tu y solamente a tu eres lo que mas quiero",
-      "Eres lo mas bonito que me ha pasado"
+      "Eres lo mas bonito que me ha pasado",
       "No puedo imaginarme sin estar a tu lado"
     ];
 
