--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@
 </head>
 <body>
   <!-- Canción Eres de Café Tacvba desde Spotify -->
-<div style="position: fixed; bottom: 10px; left: 10px; z-index: 999;">
-  <iframe style="border-radius:12px" 
-          src="https://open.spotify.com/track/6kdCN6gTWLcLxmLXoUcwuI?si=EqhluS9eTT6h45K7dPaNVw" 
-          width="250" height="80" frameBorder="0" 
-          allowfullscreen="" 
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
-</div>
+<audio autoplay loop>
+  <source src="Eres.mp3" type="audio/mpeg">
+</audio>
 
   <!-- Contenedor de frases e imágenes -->
   <div id="container"></div>
