--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   <!-- Canción Eres de Café Tacvba desde Spotify -->
 <audio autoplay loop>
-  <source src="Eres.mp3" type="audio/mpeg">
+  <source src="Eres - Cafe Tacvba (1).mp3" type="audio/mpeg">
 </audio>
 
   <!-- Contenedor de frases e imágenes -->
