--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <!-- Canción Eres de Café Tacvba desde Spotify -->
-<audio autoplay loop>
+<audio controls>
   <source src="Eres - Cafe Tacvba (1).mp3" type="audio/mpeg">
 </audio>
 
