--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 </head>
 <body>
   <!-- Canción Eres de Café Tacvba desde Spotify -->
-<audio controls>
-  <source src="Eres - Cafe Tacvba (1).mp3" type="audio/mpeg">
-</audio>
+<audio src="Eres - Cafe Tacvba (1).mp3" controls loop></audio>
 
   <!-- Contenedor de frases e imágenes -->
   <div id="container"></div>
