--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <!-- Canción Eres de Café Tacvba desde Spotify -->
-<audio id="song" loop="" src="./ls_theme.mp3"></audio>
+<audio id="song" loop="" src="./Eres - Cafe Tacvba (1).mp3"></audio>
 
   <!-- Contenedor de frases e imágenes -->
   <div id="container"></div>
@@ -140,5 +140,19 @@
     }
     drawStars();
   </script>
+  window.addEventListener('click',() => {
+
+            document.getElementById("song").play();
+
+        });
+
+        window.addEventListener('dblclick',() => {
+
+            document.getElementById("song").pause();
+
+        });
+
+    </script>
+
 </body>
 </html>
