--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       requestAnimationFrame(drawStars);
     }
     drawStars();
-  </script>
+  <script>
   window.addEventListener('click',() => {
 
             document.getElementById("song").play();
