--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <!-- Canción Eres de Café Tacvba desde Spotify -->
-<audio controls src="Eres - Cafe Tacvba (1).mp3"></audio>
+<audio autoplay controls src="Eres - Cafe Tacvba (1).mp3"></audio>
 
   <!-- Contenedor de frases e imágenes -->
   <div id="container"></div>
